# SwinTAP-healthcareChatBot

./: .gitignore  README.md  docker-compose.yaml
django-server/: Dockerfile  init-install.sh  populate.sh  pyproject.toml  requirements.txt  run.development.sh  run.migrate.sh  utils.py
django-server/RestAPI/: api.py
django-server/apiApp/: models.py
django-server/apiApp/migrations/: 0001_initial.py  0002_alter_chat_user_delete_user.py
django-server/chat/: admin.py  models.py  urls.py  views.py
django-server/chat/migrations/: 0001_initial.py
django-server/project/: celery.py  settings.py  urls.py  views.py  wsgi.py
django-server/scripts/: init-install.sh  run.development.sh
django-server/static/: index.css
django-server/templates/: base.html  chat-base.html  index.html
django-server/templates/chat/: index.html
