[tool.poetry]
name = "django-server"
version = "0.1.0"
description = ""
authors = ["Suchat Tangjarukij <125326168+RadstalST@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_server"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.4"
dnspython = "^2.4.2"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.2"
django-ninja = "^0.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
